[NCL-9037] implement heartbeat for Tasks
